# TS-AD

./: .gitignore  Dockerfile  README.md  pyproject.toml  update.md
data/: finetune_test.csv  finetune_train.csv  test.csv  train.csv
data/kpi_splits/: summary.csv
data/kpi_splits/05f10d3a-239c-3bef-9bdc-a2feeb0037aa/: finetune_test.csv  finetune_train.csv  test.csv  train.csv
data/kpi_splits/0efb375b-b902-3661-ab23-9a0bb799f4e3/: finetune_test.csv  finetune_train.csv  test.csv  train.csv
data/kpi_splits/1c6d7a26-1f1a-3321-bb4d-7a9d969ec8f0/: finetune_test.csv  finetune_train.csv  test.csv  train.csv
data/kpi_splits/301c70d8-1630-35ac-8f96-bc1b6f4359ea/: finetune_test.csv  finetune_train.csv  test.csv  train.csv
data/kpi_splits/42d6616d-c9c5-370a-a8ba-17ead74f3114/: finetune_test.csv  finetune_train.csv  test.csv  train.csv
data/kpi_splits/43115f2a-baeb-3b01-96f7-4ea14188343c/: finetune_test.csv  finetune_train.csv  test.csv  train.csv
data/kpi_splits/431a8542-c468-3988-a508-3afd06a218da/: finetune_test.csv  finetune_train.csv  test.csv  train.csv
data/kpi_splits/4d2af31a-9916-3d9f-8a8e-8a268a48c095/: finetune_test.csv  finetune_train.csv  test.csv  train.csv
data/kpi_splits/54350a12-7a9d-3ca8-b81f-f886b9d156fd/: finetune_test.csv  finetune_train.csv  test.csv  train.csv
data/kpi_splits/55f8b8b8-b659-38df-b3df-e4a5a8a54bc9/: test.csv  (+3 more)
src/: demo.py  entry.ipynb  finetune.py  test.py  train.py
src/models/: Adapter.py  DPM.py  Decoder.py  Encoder.py  KAD_Disformer.py
src/utils/: config.py  dataset.py  prepare_kpi_dataset.py  visualize_kpi_splits.py
(+76 files in other folders)
