[project]
name = "kad-disformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "tables>=3.11.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
